fixed floating on mobile version of the person/project submenus

--- a/wecker_manufaktur/page/default_page/css/default_page.scss
+++ b/wecker_manufaktur/page/default_page/css/default_page.scss
@@ -221,7 +221,8 @@ strong {
         }
 
         .project{
-            padding-bottom: $distance_big;
+            padding-top: $distance_xlarge;
+            padding-bottom: $distance_medium;
             img {
                 object-fit: cover;
                 width: $distance_huge;
